# iOSBoy

./: .gitignore  Cargo.toml  README.md  manifest.webmanifest  package-lock.json  package.json  webpack.config.js
iosboy/: Cargo.toml
iosboy/src/: main.rs
scripts/: build.sh  build_dev.sh  build_prod.sh
site/: package-lock.json  package.json
site/config/: webpack.config.js
src/: index.html  index.js  manifest.json
src/components/emu-gb-screen/: index.js
src/components/emu-nav/: index.js
src/components/emu-rom-input/: index.js  style.css
src/ios_boy/: registers.rs
src/rust/: client.rs  cpu.rs  lib.rs  opcodes.rs  registers.rs
src/utils/: device.js  router.js
src/views/GameboyView/: index.js
src/views/emu-view-gameboy/: index.js  style.css
src/views/emu-view-homepage/: index.js
src/views/gameboy-view/: index.js
src/views/homepage-view/: index.js
src/web/: index.html
src/web/components/emu-gb-dpad/: index.js
src/web/utils/: index.js
